err/auslfe.formonline.content.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/auslfe'...
Listing './lib/python3.5/site-packages/auslfe/formonline'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/browser'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/browser/images'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/content'...
Compiling './lib/python3.5/site-packages/auslfe/formonline/content/event.py'...
***   File "./lib/python3.5/site-packages/auslfe/formonline/content/event.py", line 346
    except socket.error, exc:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/auslfe/formonline/content/i18n'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/interfaces'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/locales'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/locales/it'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles/default'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles/default/workflows/formonline_workflow'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles/default/workflows/formonline_workflow_single_step'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles/withtypes'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/profiles/withtypes/types'...
Listing './lib/python3.5/site-packages/auslfe/formonline/content/tests'...
Listing './lib/python3.5/site-packages/auslfe.formonline.content-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
